--- a/estilo/stylo.css
+++ b/estilo/stylo.css
@@ -5,7 +5,7 @@ font-family: Arial, Helvetica, sans-serif;}
 html, body{ 
   height:100vh ;
   width:100vw ;
-  background-color: blue;
+  
 }
 body{
   background: url('../imagens/3d.jpg') no-repeat top center;
@@ -34,5 +34,19 @@ top: 80px;
 left: 22px;
 width: 269px;
 height: 471px;
+}
+
+section#redessociais img{
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px rgba(107, 29, 29, 0.384);
+  box-sizing: border-box;
+}
+
+section#redessociais img:hover {
+  border: 2px solid white;
+  transform: translate(2px, 2px);
+  transition: transform 0.5s, border 1s;
 
 }
